--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             </ul>
         </div>
         <div class="second">
-            <img src="../图片栏/鞠婧祎.jpg" width="332px" height="510px" alt="">
+            <img src="鞠婧祎.jpg" width="332px" height="510px" alt="">
         </div>
         <div class="third">
-            <img src="../图片栏/迪丽热巴2.jpg" width="332px" height="510px" alt="">
+            <img src="迪丽热巴2.jpg" width="332px" height="510px" alt="">
         </div>
         <div class="fourth">
-            <img src="../图片栏/章若楠.jpg" width="332px" height="510px" alt="">
+            <img src="章若楠.jpg" width="332px" height="510px" alt="">
         </div>
     </div>
 </body>
