--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="https://space.bilibili.com/8366990?spm_id_from=333.337.0.0">-欣小萌-</a></li>
                 <li><a href="https://space.bilibili.com/116683?spm_id_from=333.337.0.0">=咬人猫=</a></li>
                 <li><a href="https://space.bilibili.com/11605312?spm_id_from=333.337.0.0">青鸢Cyan-</a></li>
-                <li><a href="#">最最好看的一个</a></li>
+                <li><a href="https://yearn662.github.io/redai/">最最好看的一个</a></li>
             </ul>
         </div>
         <div class="second">
